Ensure Pac-Man animation is visible on all screen sizes and orientations
Repositioned Pac-Man animation keyframes to use `calc` with viewport units instead of fixed values in `index.css`.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -216,28 +216,23 @@
     }
     25% { 
       top: 5px; 
-      right: 5px;
-      left: auto;
+      left: calc(100vw - 25px);
       transform: rotate(0deg);
     }
     25.1% {
       transform: rotate(90deg);
     }
     50% { 
-      bottom: 5px;
-      top: auto; 
-      right: 5px;
-      left: auto;
+      top: calc(100vh - 25px); 
+      left: calc(100vw - 25px);
       transform: rotate(90deg);
     }
     50.1% {
       transform: rotate(180deg);
     }
     75% { 
-      bottom: 5px;
-      top: auto; 
+      top: calc(100vh - 25px); 
       left: 5px;
-      right: auto;
       transform: rotate(180deg);
     }
     75.1% {
@@ -245,9 +240,7 @@
     }
     100% { 
       top: 5px; 
-      bottom: auto;
       left: 5px;
-      right: auto;
       transform: rotate(270deg);
     }
   }
